fix: styling (overflow) on video btn

--- a/qwik-app/src/routes/Dsessential/panel/(student)/lessonReplay/components/videos/videoList/videoList.module.css
+++ b/qwik-app/src/routes/Dsessential/panel/(student)/lessonReplay/components/videos/videoList/videoList.module.css
@@ -16,6 +16,7 @@
   display: flex;
   padding: 10px 25px;
   gap: 10px;
+  flex-wrap: wrap;
 }
 
 .videoButton {
@@ -26,6 +27,9 @@
   cursor: pointer;
   border-radius: 50px;
   padding: 5px 15px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .videoPlayerContainer {
